<resources>
    <string name="app_name">ScrapProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_fragment">user profile fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#114B5F">Register Now</font></string>
    <string name="txt_register_header">Create New Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">scraphub</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">scraphub@gmail.com</string>
    <string name="txt_contact_hint">+923447668384</string>
    <string name="txt_address_hint">39-A gulfishan colony faisalabad</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account?</string>
    <string name="txt_login_header">Welcome Back!</string>
    <string name="txt_login_subheader">Login to access your profile</string>
    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="scraphub">ScrapHub</string>
    <string name="nearest_yard">Nearest Yard</string>
    <string name="schedule_pickup">Schedule Pickup</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="scrap_item_deatils">Scrap item deatils</string>
    <string name="schedule_your_pickup">Schedule your pickup</string>
    <string name="faisalabad_sh1">Faisalabad SH1</string>
    <string name="select_nearest_yard">Select nearest yard</string>
    <string name="_1_2_23">1/2/23</string>
    <string name="iron_2kg_nplastic_1kg">iron 2kg \nplastic 1kg</string>
    <string name="proceed">Proceed</string>
    <string name="_11_30">11:30</string>
    <string name="contacts">Contact</string>
    <string name="home">Home</string>
    <string name="blog">Blog</string>
    <string name="more">More</string>
    <string name="title_activity_ne_maps">NeMapsActivity</string>
    <string name="contact_us">Contact Us\n088-949-969</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="_1234">1234</string>
    <string name="userali">userAli</string>
    <string name="number">Number</string>
    <string name="pickups">Pickups</string>
    <string name="deatils_of_scrap">Deatils of Scrap</string>
    <string name="_923447668384">+923447668384</string>
    <string name="_39_a_gulfishan_colony">39/A gulfishan colony</string>
    <string name="iron_2kg">iron 2kg</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="username">Username</string>
</resources>