<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/appbackColor"
tools:context=".collectorInterface.ViewPickupsFragment">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical"
    android:paddingTop="10dp"
    android:paddingBottom="60dp">


    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="100dp"
        android:textSize="24sp"
        android:fontFamily="@font/sf_pro_display_bold"
        android:text="@string/pickups" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/number"
        android:textColor="#455A64"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtviewScheduleNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/_1234"
        android:textColorHint="#455A64"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textColor="#455A64" />

    <TextView
        android:id="@+id/txtviewScheduleUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/userali"
        android:textColorHint="#455A64"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/contact"
        android:textColor="#455A64" />

    <TextView
        android:id="@+id/txtviewScheduleUserContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/_923447668384"
        android:textColorHint="#455A64"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/address"
        android:textColor="#455A64" />

    <TextView
        android:id="@+id/txtviewScheduleAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/_39_a_gulfishan_colony"
        android:textColorHint="#455A64"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/deatils_of_scrap"
        android:textColor="#455A64" />

    <TextView
        android:id="@+id/txtviewScheduleScrapDetails"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="10dp"
        android:hint="@string/iron_2kg"
        android:textColorHint="#455A64"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnAcceptPickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        tools:ignore="TextContrastCheck" />
</LinearLayout>
</ScrollView>